--- a/Group3/test_model2.ipynb
+++ b/Group3/test_model2.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 52,
    "id": "6b05f047",
    "metadata": {
     "ExecuteTime": {
@@ -107,12 +107,12 @@
      "data": {
       "text/plain": [
        "checked\n",
-       "0   0.9067\n",
-       "1   0.0933\n",
+       "0   0.9000\n",
+       "1   0.1000\n",
        "Name: proportion, dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "id": "39b4ba36",
    "metadata": {
     "ExecuteTime": {
@@ -138,8 +138,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean likelihood for 0 developments in PLA history: 0.3211682365112698\n",
-      "Mean likelihood for 25 developments in PLA history: 0.23949710015988432\n"
+      "Mean likelihood for 0 developments in PLA history: 0.3404891435974622\n",
+      "Mean likelihood for 25 developments in PLA history: 0.2581012699999042\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     "likelihoods_25 = []\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "id": "716dba05",
    "metadata": {
     "ExecuteTime": {
@@ -202,8 +202,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean likelihood for a client that has shown up for meetings: 0.204221780094143\n",
-      "Mean likelihood for no show client: 0.2610893434733811\n"
+      "Mean likelihood for a client that has shown up for meetings: 0.2187287717008836\n",
+      "Mean likelihood for no show client: 0.27761307624358345\n"
      ]
     }
    ],
@@ -213,7 +213,7 @@
     "likelihoods_noshow = []\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "id": "349d018b",
    "metadata": {
     "ExecuteTime": {
@@ -258,8 +258,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean likelihood for a client without an activated instrument ladder: 0.304818561191821\n",
-      "Mean likelihood for a client with an activated instrument ladder: 0.2381154165352216\n"
+      "Mean likelihood for a client without an activated instrument ladder: 0.32519890665300943\n",
+      "Mean likelihood for a client with an activated instrument ladder: 0.2574511158650173\n"
      ]
     }
    ],
@@ -269,7 +269,7 @@
     "likelihoods_activated = []\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "id": "9011c2b2",
    "metadata": {
     "ExecuteTime": {
@@ -314,8 +314,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean likelihood for a client without a successful instrumentation history: 0.3329699651306613\n",
-      "Mean likelihood for a client with a successful instrumentation history: 0.2719085718640874\n"
+      "Mean likelihood for a client without a successful instrumentation history: 0.35310968828559536\n",
+      "Mean likelihood for a client with a successful instrumentation history: 0.29133165888561946\n"
      ]
     }
    ],
@@ -325,7 +325,7 @@
     "likelihoods_successful = []\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "id": "735462f8",
    "metadata": {
     "ExecuteTime": {
@@ -370,7 +370,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fraction of cases where predictions are the same for age 25 and 65: 0.0\n"
+      "Fraction of cases where predictions are the same for age 25 and 65: 7.908264136022143e-05\n"
      ]
     }
    ],
@@ -378,10 +378,10 @@
     "# Age test\n",
     "# Initialize variables to store counts\n",
     "same_predictions_count = 0\n",
-    "total_samples = len(X_test)\n",
+    "total_samples = len(X)\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "1b0931b3",
    "metadata": {
     "ExecuteTime": {
@@ -420,7 +420,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fraction of cases where predictions are the same for men and women: 0.0\n"
+      "Fraction of cases where predictions are the same for men and women: 0.0\n",
+      "Mean likelihood for a man: 0.09018988074781208\n",
+      "Mean likelihood for a woman: 0.5208941890393005\n"
      ]
     }
    ],
@@ -428,10 +430,13 @@
     "# Gender test\n",
     "# Initialize variables to store counts\n",
     "same_predictions_count = 0\n",
-    "total_samples = len(X_test)\n",
+    "total_samples = len(X_sample_successful)\n",
+    "\n",
+    "likelihoods_men = []\n",
+    "likelihoods_women = []\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -444,6 +449,11 @@
     "    X_sample_women = X_sample.copy()\n",
     "    X_sample_women['persoon_geslacht_vrouw'] = 1.0\n",
     "    y_pred_women = testing_session.run(None, {'X': X_sample_women.values.astype(np.float32)})\n",
+    "    \n",
+    "    \n",
+    "    # Append the likelihoods for both groups\n",
+    "    likelihoods_men.append([y_pred_men[1][0][1]])\n",
+    "    likelihoods_women.append([y_pred_women[1][0][1]])\n",
     "\n",
     "    # Check if predictions are the same\n",
     "    if y_pred_men == y_pred_women:\n",
@@ -452,12 +462,22 @@
     "# Calculate the fraction of cases where the predictions are the same\n",
     "fraction_same_predictions = same_predictions_count / total_samples\n",
     "\n",
-    "print(\"Fraction of cases where predictions are the same for men and women:\", fraction_same_predictions)"
+    "# Convert likelihoods lists to NumPy arrays\n",
+    "likelihoods_men = np.array(likelihoods_men)\n",
+    "likelihoods_women = np.array(likelihoods_women)\n",
+    "\n",
+    "# Calculate the mean likelihoods for each group\n",
+    "mean_likelihood_men = np.mean(likelihoods_men)\n",
+    "mean_likelihood_women = np.mean(likelihoods_women)\n",
+    "\n",
+    "print(\"Fraction of cases where predictions are the same for men and women:\", fraction_same_predictions)\n",
+    "print(\"Mean likelihood for a man:\", mean_likelihood_men)\n",
+    "print(\"Mean likelihood for a woman:\", mean_likelihood_women)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 60,
    "id": "975e7e28",
    "metadata": {
     "ExecuteTime": {
@@ -478,10 +498,10 @@
     "# Language test\n",
     "# Initialize variables to store counts\n",
     "same_predictions_count = 0\n",
-    "total_samples = len(X_test)\n",
+    "total_samples = len(X)\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
@@ -507,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 61,
    "id": "408f31c4",
    "metadata": {
     "ExecuteTime": {
@@ -520,8 +540,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([1], dtype=int64), [{0: 0.002106010913848877, 1: 0.9978939890861511}]]\n",
-      "Fraction of cases where predictions are the same for people with or without children: 0.0\n"
+      "Fraction of cases where predictions are the same for people with or without children: 1.0\n"
      ]
     }
    ],
@@ -529,10 +548,10 @@
     "# Children test\n",
     "# Initialize variables to store counts\n",
     "same_predictions_count = 0\n",
-    "total_samples = len(X_test)\n",
+    "total_samples = len(X)\n",
     "\n",
     "# Iterate through each sample in the test set\n",
-    "for index, row in X_test.iterrows():\n",
+    "for index, row in X.iterrows():\n",
     "    # Convert the row to a DataFrame to ensure it's a DataFrame object\n",
     "    X_sample = pd.DataFrame(row).transpose()\n",
     "\n",
